feat: update new proudct feature with jsonb